--- a/index.html
+++ b/index.html
@@ -1,5 +1,342 @@
 <!DOCTYPE html>
+
+
+<style>
+
+body, html {
+
+background-color: #eee;
+font-family: 'Open Sans', sans-serif;
+font-weight:lighter;
+color:grey;
+height: 100%;
+width:100%;
+
+
+}
+
+.aboutbox{
+float:right;
+position:relative;
+margin-right:5%;	
+margin-top:2%;
+height:35%;
+width:40%;
+
+}
+
+.portfoliocontainer1{
+
+
+
+}
+
+
+
+.page{
+
+	height:100%;
+	width:100%;
+}
+
+#splash{
+
+ background: 
+
+    linear-gradient(
+      rgba(0, 0, 0, 0.6), 
+      rgba(0, 0, 0, 0.6)
+    ),
+
+    url(1.jpg) center center;
+
+background-size: cover;
+height:100%;
+     margin-left:-8px;
+	top: 0;
+	right: 0;
+	bottom: 0;
+     margin-top:-10px;
+	width:100%;
+	min-height: 360px;
+	background-attachment: fixed;
+
+position:static;
+
+
+
+
+
+}
+
+
+
+.navbox{
+
+
+display:inline-block;
+padding-left:20px;
+padding-right:20px;
+padding-top:5px;
+padding-bottom:5px;
+border:2px solid white;
+color:white;
+font-size:16px;
+margin-bottom:20px;
+
+
+
+}
+
+.navbox a{
+text-decoration: none;
+	color:white;
+}
+
+
+
+
+.navbox:hover{
+
+background-color:rgba(255, 255, 255, 0.4);
+-webkit-transition: background 0.5s linear;
+        -moz-transition: background 0.5s linear;
+        -ms-transition: background 0.5s linear;
+        -o-transition: background 0.5s linear;
+        transition: background 0.5s linear;
+
+
+
+
+}
+
+#splashtext{
+	background-color:rgba(255, 255, 255, 0.15);
+	position:relative;
+ 	margin:auto;
+	top:40%;
+    letter-spacing:4px;
+    text-align:center;
+    color:white;
+    font-size:4em;
+    width:40%;
+    border:2px solid white;
+
+}
+
+
+.box {
+    position:relative;
+    margin:auto;
+    top:30%;
+	background-color:white;
+    width:100%;
+	height:45%;
+	margin-left:-8px;
+	padding-top:5px;
+
+	
+}
+
+.largebox{
+
+    position:relative;
+    margin:auto;
+    top:20%;
+	background-color:white;
+    width:100%;
+	height:65%;
+	margin-left:-8px;
+	padding-top:5px;
+
+
+
+}
+
+footer{
+
+
+background-color:rgba(34, 34, 34, 0.7);
+padding-top:25px;
+padding-bottom:25px;
+text-align: center;
+color:white;
+margin-left:-10px;
+}
+
+#navbar{
+
+background-color:rgba(84, 84, 84, 0.7);
+position:fixed;
+width:99%;
+text-transform: uppercase;
+color:white;
+text-align:right;
+padding-top:10px;
+padding-right:20px;
+padding-bottom:10px;
+margin-left:-8px;
+z-index:999;
+font-size: 14px;
+letter-spacing:2px;
+
+}
+
+#navbar a{
+
+	color:white;
+	text-decoration: none;
+}
+
+
+
+#navbar a:hover{
+
+	text-decoration:underline;
+}
+
+h1 {
+
+	text-transform: uppercase;
+	font-weight:lighter;
+	letter-spacing: 3px;
+	color:gray;
+	font-size:2em;
+	text-align:center;
+
+
+
+
+}
+
+.splash-arrow {
+
+
+	position: absolute;
+	bottom: 55px;
+	left: 50%;
+	margin-left: -25px;
+
+	width: 50px;
+	height: 50px;
+
+
+	
+}
+
+.splash-arrow:hover {
+	
+	bottom: 50px;
+}
+
+
+
+
+</style>
+
 <html>
+
+
+<head> <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,300' rel='stylesheet' type='text/css'>
+
+<title>Katie Chang</title>
+
+</head>
 <body>
+
+<div id="navbar">
+
+
+	<a href="#about" class="smoothScroll">about</a> | <a href="#portfolio" class="smoothScroll">portfolio</a> | <a href="#contact" class="smoothScroll">contact</a></div>
+
+
+
+
+
+
+<div id="splash">
+
+	<div id="splashtext">
+	KATIE CHANG
+
+	<nav>
+<div class="navbox"><a href="#about" class="smoothScroll">ABOUT</a></div>
+<div class="navbox"><a href="#portfolio" class="smoothScroll">PORTFOLIO</a></div>
+<div class="navbox"><a href="#contact" class="smoothScroll">CONTACT</a></div>
+
+
+</nav>
+
+</div>
+
+<div class="splash-arrow"><a href="#portfolio" class="smoothScroll"><img src="down-arrow.png"></a></div>
+
+
+
+</div>
+
+
+
+<a name="about"></a>
+<div class="page">
+	<div class="box"> 
+
+
+		<h1><font color="fabfab"><b>|</b></font> ABOUT</h1>
+	<div class="aboutbox"> 
+	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique mauris id luctus scelerisque. Aliquam nisl nunc, commodo ac aliquet a, ultricies in nibh. Vestibulum molestie turpis eu commodo vestibulum. Etiam sit amet quam sit amet orci maximus luctus sit amet vitae tortor. Quisque tincidunt nulla quis hendrerit sollicitudin. Maecenas vehicula fermentum tellus vel eleifend. Aenean malesuada, nibh a semper maximus, felis nulla ultrices magna, ac feugiat nunc leo in magna. Mauris ultricies fermentum tempor. Proin elementum, ex congue egestas mattis, justo eros egestas mauris, quis commodo erat tortor non massa.
+</div>
+
+		
+</div>
+</div>
+
+
+<a name="portfolio"></a>
+<div class="page">
+	
+	<div class="largebox">
+
+	<h1><font color="fabfab"><b>|</b></font> Portfolio</h1>
+
+	<hr><center>Photography // Graphic Design 1 // Graphic Design 2 // Web Design // Digital Artwork
+	<hr>
+
+
+
+<div class="portfoliocontainer1">
+
+
+
+</div>
+
+
+
+
+
+
+</div>
+</div>
+
+
+
+<a name="contact"></a>
+<div class="page">
+	<div class="box"> 
+
+		<h1><font color="fabfab"><b>|</b></font> CONTACT</h1>
+</div>
+</div>
+
+<footer>FOOTER</footer>
+
+
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+
+
+<script type="text/javascript" src="js/smoothscroll.js"></script>
+
 </body>
 </html>
+
