splash image fix
file extension change

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ width:40%;
       rgba(0, 0, 0, 0.6)
     ),
 
-    url(1.jpg) center center;
+    url(1.JPG) center center;
 
 background-size: cover;
 height:100%;
